fix: Overflow

--- a/frontend/src/app/components/FileManagerNew/FileList/FileList.module.css
+++ b/frontend/src/app/components/FileManagerNew/FileList/FileList.module.css
@@ -54,6 +54,7 @@ div.fileEntry {
         text-overflow: ellipsis;
         white-space: nowrap;
         text-align: center;
+        max-width: 80%;
     }
 }
 
