--- a/frontend/src/app/components/FileManagerNew/FolderTree/FolderTree.module.css
+++ b/frontend/src/app/components/FileManagerNew/FolderTree/FolderTree.module.css
@@ -1,6 +1,9 @@
-.folder {
+.folderTree {
     border-top: 1px solid #cfcfcf;
-    margin-left: 1rem;
+}
+
+.folder {
+    margin-left: 1em;
 }
 
 .expandSpan {
@@ -13,15 +16,23 @@
     cursor: pointer;
 }
 
-.folderName {
+div.folderName {
     display: flex;
     align-items: center;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.folderName:hover {
+div.folderName:hover {
     background-color: #f0f0f0;
+}
+
+span.folderName {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex-shrink: 1;
 }
 
 .folderName.selected {
@@ -30,4 +41,6 @@
 
 .folderName .faIcon {
     margin-right: 0.2rem;
+    width: 1em;
+    flex-shrink: 0;
 }
